--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Interstellar-Ella_Ketnet</title>
+    <title>Interstellar OG Deco</title>
     <link rel="stylesheet" href="Build/style.css">
     <script src="Build/UnityLoader.js"></script>
     <script>
