--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Interstellar OG Deco</title>
-    <link rel="stylesheet" href="Build/style.css">
+    <link rel="stylesheet" href="./style.css">
     <script src="Build/UnityLoader.js"></script>
     <script>
       UnityLoader.instantiate("unityContainer", "Build/Build.json", {Module: {backgroundColor: "#EEEEEE "}});
